--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit==1.31.0
-boto3==1.34.0
-pandas==2.1.1
-pdf2image==1.17.0
-Pillow==10.0.1
-openpyxl==3.1.2
-python-dotenv==1.0.0
-numpy>=1.24.0
+streamlit>=1.22.0,<2.0.0
+boto3>=1.26.0,<2.0.0
+pandas>=1.5.0,<3.0.0
+pdf2image>=1.14.0,<2.0.0
+Pillow>=9.0.0,<11.0.0
+openpyxl>=3.0.0,<4.0.0
+python-dotenv>=0.19.0,<2.0.0
+numpy>=1.20.0,<2.0.0
