--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit>=1.22.0,<2.0.0
 boto3>=1.26.0,<2.0.0
 pandas>=1.5.0,<3.0.0
 pdf2image>=1.14.0,<2.0.0
-Pillow>=9.0.0,<11.0.0
+Pillow==9.5.0  # Using a specific version with pre-built wheels
 openpyxl>=3.0.0,<4.0.0
 python-dotenv>=0.19.0,<2.0.0
 numpy>=1.20.0,<2.0.0
