--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-streamlit>=1.22.0,<2.0.0
-boto3>=1.26.0,<2.0.0
-pandas>=1.5.0,<3.0.0
-pdf2image>=1.14.0,<2.0.0
-Pillow==9.5.0  # Using a specific version with pre-built wheels
-openpyxl>=3.0.0,<4.0.0
-python-dotenv>=0.19.0,<2.0.0
-numpy>=1.20.0,<2.0.0
+# Core dependencies
+streamlit==1.30.0
+boto3==1.28.0
+pandas==2.0.3
+openpyxl==3.1.2
+python-dotenv==1.0.0
+numpy==1.24.3
+
+# PDF and Image processing
+pdf2image==1.16.3
+Pillow==9.5.0
+
+# AWS Textract dependencies
+botocore==1.31.0
+s3transfer==0.6.2
